# FCN_web

./: .dockerignore  .gitignore  Dockerfile.app  README.md  docker-compose.yml  genenv.py  local.ini  nginx.conf  pyproject.toml
.github/workflows/: github-actions.yml
backend/: Dockerfile  config.py  db.py  main.py  model.py  models.py  requirements.txt  schema.py
backend/routers/: member.py  product.py  report.py  stock_report.py
backend/service/: db_member.py  db_product.py  db_report.py  hash.py  oauth2.py  stock_report_service.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  app.vue  formkit.config.ts  formkit.theme.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/assets/: static_data.ts
frontend/components/: AddProductModal.vue  HeadMenu.vue  ProductPane.vue  StockReport.vue
frontend/composables/: useAPI.ts  utils.ts
frontend/layouts/: default.vue
frontend/middleware/: auth.ts
frontend/pages/: fishapp.vue  index.vue  login.vue
frontend/plugins/: api.ts
frontend/stores/: asidePane.ts  product.ts  token.ts
notebook/: crawler.ipynb  stock_fcn.ipynb
